# toolu-ghrunner

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  bacon.toml  cliff.toml  clippy.toml  deny.toml  install.sh  lefthook.yml  release-plz.toml  rustfmt.toml
crates/cache/: Cargo.toml
crates/cache/src/: server.rs
crates/config/: Cargo.toml
crates/config/src/: app_store.rs  auth_store.rs  config.rs  lib.rs  registry.rs  remint.rs  repo_infer.rs  service_unit.rs
crates/config/tests/: app_store_test.rs  auth_store_no_keyring_test.rs  home_perms_test.rs  lockfile_multi_test.rs  registry_test.rs  remint_test.rs  repo_infer_test.rs  secret_file_perms_test.rs  service_action_test.rs  service_unit_test.rs
crates/execution/: Cargo.toml
crates/execution/src/: lib.rs
crates/execution/tests/: action_ref_traversal_test.rs  command_dispatch_guard_test.rs  env_isolation_test.rs  file_command_guard_test.rs  oidc_url_test.rs  service_auth_test.rs
crates/expressions/: Cargo.toml
crates/expressions/src/: context_data.rs  lexer.rs  template.rs  types.rs
crates/listener/: Cargo.toml
crates/listener/src/: execution_loop.rs  handler.rs  helpers.rs  job_lifecycle.rs  lib.rs  loop_decision.rs  message_route.rs  setup_step.rs  step_reporter.rs
crates/listener/tests/: loop_decision_test.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/observability/tests/: watch_multi_dir_test.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: app_manifest.rs  auth.rs  body_decrypt.rs  lib.rs  session.rs  types.rs
crates/protocol/tests/: app_manifest_test.rs  auth_crt_guard_test.rs  integration.rs  message_crypto.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  events.rs  lib.rs  paths.rs  platform.rs  secret_masker.rs  startup.rs
crates/shared/tests/: config_test.rs  events_test.rs  job_message_test.rs  redacting_writer_test.rs  secret_masker_test.rs  startup_redaction_test.rs
crates/toolu-runner/: Cargo.toml
crates/toolu-runner/src/: cli.rs  create_app_cmd.rs  lib.rs  login_cmd.rs  main.rs  register_cmd.rs  run_cmd.rs  service_cmd.rs  setup_cmd.rs  status_cmd.rs  wizard_steps.rs
crates/toolu-runner/tests/: actions_resolver_test.rs  auth_store_test.rs  cache_accelerated_test.rs  cache_blob_test.rs  cache_l2_test.rs  cache_live_docker.rs  cache_live_e2e.rs  cache_poisoning_test.rs  cache_proxy_test.rs  cache_scope_test.rs  cache_server_test.rs  cache_twirp_test.rs  cache_v1_test.rs  cas_dedup_test.rs  cas_gc_test.rs  cas_index_test.rs  cas_manifest_test.rs  cas_store_test.rs  cli_test.rs  composite_action_test.rs  config_resolve_test.rs  create_app_test.rs  device_auth_test.rs  expression_eval_test.rs  failure_modes_test.rs  gh_compat_actions.rs  gh_compat_cancel.rs  gh_compat_commands.rs  gh_compat_context.rs  gh_compat_deadlock.rs  gh_compat_decrypt.rs  gh_compat_fixture.rs  gh_compat_forwarder.rs  gh_compat_job_outputs.rs  gh_compat_live_log.rs  gh_compat_poll_cursor.rs  gh_compat_prepost.rs  gh_compat_register.rs  gh_compat_step_attrs.rs  gh_compat_streaming.rs  (+32 more)
crates/wire/: Cargo.toml
crates/wire/src/: lib.rs
crates/wire/tests/: app_manifest_test.rs  device_token_debug_test.rs
protocol/: Cargo.toml
protocol/src/: auth.rs  jit_config.rs  lib.rs  messages.rs  rsa_oaep.rs  session.rs  types.rs
protocol/src/v1/: discovery.rs  mod.rs
protocol/tests/: integration.rs  message_crypto.rs
shared/: Cargo.toml
shared/src/: config.rs  error.rs  lib.rs  paths.rs  startup.rs
shared/src/job_message/: context_data.rs  resource.rs  template_token.rs
shared/tests/: config_test.rs  error_test.rs  job_message_test.rs  startup_redaction_test.rs
toolu-runner/: Cargo.toml
toolu-runner/src/: auth_store.rs  config.rs  lib.rs  lockfile.rs  login_cmd.rs  main.rs  status_cmd.rs
toolu-runner/src/docker/: mod.rs  services.rs
toolu-runner/src/execution/: action_exec.rs  action_support.rs  command_dispatch.rs  command_parser.rs  composite_env.rs  composite_exec.rs  composite_expr.rs  composite_scope.rs  composite_uses.rs  context.rs  docker_cache.rs  failure_category.rs  job_hooks.rs  job_runner.rs  mod.rs  node_stage.rs  post_drain.rs  secret_masker.rs  service_endpoints.rs  step_env.rs  step_naming.rs  step_state.rs  step_timeout.rs  steps_runner.rs  workspace_gc.rs
toolu-runner/src/journal/: mod.rs  reader.rs  types.rs  writer.rs
toolu-runner/src/listener/: execution_loop.rs  handler.rs  helpers.rs  job_lifecycle.rs  message_route.rs  mod.rs  setup_step.rs  step_reporter.rs
toolu-runner/src/net/: auth.rs  device_auth.rs  log_upload.rs  messages.rs  mod.rs  register.rs  results_service.rs  run_service.rs  session.rs  v1.rs
toolu-runner/src/node/: mod.rs  runtime.rs
toolu-runner/src/plugin/: mod.rs
toolu-runner/src/reporting/: live_log.rs  log_upload.rs  mod.rs  results_service.rs  results_types.rs  run_service.rs  types.rs
toolu-runner/src/watch/: mod.rs  state.rs
toolu-runner/tests/: actions_resolver_test.rs  auth_store_test.rs  cache_accelerated_test.rs  cache_blob_test.rs  cache_l2_test.rs  cache_live_docker.rs  cache_live_e2e.rs  cache_proxy_test.rs  cache_twirp_test.rs  cache_v1_test.rs  cas_dedup_test.rs  cas_index_test.rs  cas_manifest_test.rs  cas_store_test.rs  cli_test.rs  composite_action_test.rs  device_auth_test.rs  expression_eval_test.rs  failure_modes_test.rs  gh_compat_actions.rs  gh_compat_commands.rs  gh_compat_context.rs  gh_compat_deadlock.rs  gh_compat_decrypt.rs  gh_compat_forwarder.rs  gh_compat_job_outputs.rs  gh_compat_live_log.rs  gh_compat_prepost.rs  gh_compat_register.rs  gh_compat_step_attrs.rs  gh_compat_streaming.rs  ghes_v1_test.rs  hash_files_test.rs  journal_reader_test.rs  journal_writer_test.rs  listener_smoke_test.rs  live_e2e.rs  live_integration.rs  live_login_e2e.rs  net_test.rs  (+8 more)
toolu-runner/tests/fixtures/: broker_message_job_request.json  jit_config_github_com.json  job_message.json  secret-masking-expected.txt
toolu-runner/tests/helpers/: live_harness.rs
toolu-runner/tests/live/: harness.rs  mod.rs  register_test.rs  run_test.rs
(+292 files in other folders)
