# toolu-runner — unified Rust workspace
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Falconiere/toolu-ghrunner"

# ── Shared lint configuration ──────────────────────────────────────
# Strict by design — every error and warning is a code-quality signal we
# don't want to ship.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
unimplemented = "deny"
todo = "deny"
indexing_slicing = "deny"
result_large_err = "deny"
map_err_ignore = "deny"
cognitive_complexity = "deny"
too_many_lines = "deny"
too_many_arguments = "deny"
fn_params_excessive_bools = "deny"
struct_excessive_bools = "deny"
single_match_else = "deny"
manual_let_else = "deny"
needless_pass_by_value = "deny"
disallowed_methods = "deny"
wildcard_enum_match_arm = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
cast_possible_wrap = "deny"
checked_conversions = "deny"
lossy_float_literal = "deny"
unnecessary_wraps = "deny"
trivially_copy_pass_by_ref = "deny"
cloned_instead_of_copied = "deny"
flat_map_option = "deny"
redundant_clone = "deny"
clone_on_ref_ptr = "deny"
large_types_passed_by_value = "deny"
implicit_clone = "deny"
str_to_string = "deny"
verbose_file_reads = "deny"
module_name_repetitions = "allow"
similar_names = "warn"
if_not_else = "warn"
match_same_arms = "warn"
redundant_else = "warn"
missing_docs_in_private_items = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[workspace.lints.rust]
unsafe_code = "deny"
unused_imports = "deny"
deprecated = "deny"
unused_must_use = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

# ── Shared profile ─────────────────────────────────────────────────
# Dev profile: fast incremental compile, full debuginfo on our own crates
# (line tables only), zero debuginfo on deps.
[profile.dev]
opt-level = 0
incremental = true
split-debuginfo = "unpacked"
debug = 1
codegen-units = 256

[profile.dev.package.sha2]
opt-level = 2
[profile.dev.package.serde_json]
opt-level = 2

[profile.dev.package."*"]
debug = 0

[profile.test]
opt-level = 0
incremental = true
debug = 0
codegen-units = 256

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
