[package]
name = "protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# Strict dep set: data + crypto only. No I/O crates. Enforced in CI.
[dependencies]
shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
base64 = "0.22"
jsonwebtoken = "9"
num-bigint-dig = "0.8"
pkcs1 = { version = "0.7", features = ["alloc"] }
sha1 = "0.10"
sha2 = "0.10"
aes = "0.8"
cbc = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[lints]
workspace = true
