[package]
name = "cache"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
shared = { path = "../shared" }

# Async runtime
tokio = { version = "1", features = ["rt", "sync", "time", "net", "io-util", "fs"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Local HTTP cache services + selective reverse proxy
axum = "0.8"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }

# Content-addressed store: opendal (fs + s3 tiers), FastCDC chunking, BLAKE3 chunk ids
opendal = { version = "0.51", features = ["services-fs", "services-s3"] }
fastcdc = "4"
blake3 = "1"
# Azure Blob "Put Block List" XML
quick-xml = "0.37"

# Crypto / ids / time
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
# CSPRNG for blob bearer tokens
rand = { version = "0.8", features = ["std_rng"] }

# Observability
tracing = "0.1"

[lints]
workspace = true
