[package]
name = "config"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
shared = { path = "../shared" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# OS keyring for CLI login token persistence (no libdbus: linux-native = kernel keyutils)
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native"] }

# Single-job advisory file lock + liveness probe for stale-lock recovery
fs2 = "0.4"
sysinfo = "0.37"

# RFC3339 timestamps in the lock body / stored token
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Structured warnings (unknown [services] mode, keyring fallback)
tracing = "0.1"

# O_NOFOLLOW constant for the secret-file open (symlink-refusing write).
# Unix-only; the portable constant differs per-OS (0x100 macOS, 0o400000
# Linux) so we take it from libc rather than hard-coding a value.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Real temp dirs for the lockfile concurrency tests (no mocks)
tempfile = "3"

[lints]
workspace = true
