[package]
name = "execution"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
shared = { path = "../shared" }
expressions = { path = "../expressions" }
cache = { path = "../cache" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "net", "io-util", "fs"] }
tokio-util = "0.7"
futures-util = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Web / HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }

# Local HTTP services (artifact / cache / OIDC micro-services)
axum = "0.8"

# OIDC JWT minting
jsonwebtoken = "9"

# Shadow-mode fingerprints (records only)
blake3 = "1"

# Observability (no OTel in v1)
tracing = "0.1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
hostname = "0.4"
tempfile = "3"
tar = "0.4"
flate2 = "1"

# Docker
bollard = "0.20"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
# Integration tests build a real HeaderMap / assert StatusCode against the
# service-auth + OIDC url helpers (a normal dep isn't visible to tests/).
axum = "0.8"

[lints]
workspace = true
