[package]
name = "observability"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
shared = { path = "../shared" }
config = { path = "../config" }

# Async runtime (journal writer/reader I/O + watch tick loop)
tokio = { version = "1", features = ["rt", "sync", "fs", "io-util"] }

# Serialization (on-disk journal line contract)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# RFC3339 timestamps on journal lines
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Liveness probe for `watch` cancel (find the runner process by pid)
sysinfo = "0.37"

# Structured warnings (journal never fails the job; warn-once)
tracing = "0.1"

# watch TUI
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
# Real temp runner homes for the watch multi-dir discovery tests (no mocks)
tempfile = "3"

[lints]
workspace = true
