[package]
name = "shared"
version.workspace = true
edition.workspace = true
publish = false # never published to crates.io (mirrors release-plz.toml [workspace] publish = false)
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[lints]
workspace = true
