[package]
name = "toolu-runner"
version.workspace = true
edition.workspace = true
publish = false # never published to crates.io (mirrors release-plz.toml [workspace] publish = false)
license.workspace = true
repository.workspace = true

[[bin]]
name = "toolu-runner"
path = "src/main.rs"

# Bin-only crate: main.rs + login_cmd.rs + status_cmd.rs. The engine lives in
# `execution`, the JIT lifecycle in `listener`; both reach the bin transitively
# through `listener`. `[dependencies]` lists only what the three bin files name
# directly — everything the integration tests need is in `[dev-dependencies]`.
[dependencies]
# Internal
shared = { path = "../shared" }
protocol = { path = "../protocol" }
config = { path = "../config" }
wire = { path = "../wire" }
observability = { path = "../observability" }
listener = { path = "../listener" }

# Async runtime (bin: #[tokio::main] + SIGINT/SIGTERM signal bridge)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = "0.7"

# Web / HTTP (register `generate-jitconfig` + device-flow login clients)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }

# Observability (no OTel in v1)
tracing = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
url = ">=2, <2.5.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hostname = "0.4"
# Decorrelated-jitter backoff for the always-online run loop (run_cmd).
fastrand = "2"

[dev-dependencies]
# Internal — the test target integration-tests the full engine graph, so it
# names `execution` / `expressions` / `cache` directly (the bin only reaches
# them transitively through `listener`).
execution = { path = "../execution" }
expressions = { path = "../expressions" }
cache = { path = "../cache" }

# HTTP mocking + filesystem / test fixtures
wiremock = "0.6"
tempfile = "3"
# Safe, scoped process-env mutation for the resolve_bearer env test.
# The crate keeps all `unsafe env::set_var` internal, so our tests stay
# `unsafe`-free (workspace `unsafe_code = "deny"`).
temp-env = "0.3"
filetime = "0.2"

# Async / futures test helpers
futures-util = "0.3"
async-trait = "0.1"

# Serialization
serde_json = "1"

# Crypto fixtures for the auth / jit-config tests
rsa = "0.9"
pkcs1 = "0.7"
aes = "0.8"
cbc = "0.1"
sha1 = "0.10"
base64 = "0.22"
blake3 = "1"
# CSPRNG for the crypto-fixture tests
rand = { version = "0.8", features = ["std_rng"] }

# Local HTTP service tests
axum = "0.8"

# Archive fixtures
tar = "0.4"
flate2 = "1"

# Lock + id fixtures
fs2 = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }

# watch TUI tests
ratatui = "0.29"
crossterm = "0.28"

[features]
e2e = []
e2e-live = ["e2e"]
e2e-live-ghes = ["e2e"]
# `live` gates the integration tests in `tests/live/`. They hit the real
# GitHub API (POST registration-token, dispatch workflows, etc.) and are
# only meaningful when run against a real test repo + PAT. Default builds
# (no feature flag) skip them entirely so `cargo test --workspace` is
# hermetic. Use `cargo test -p toolu-runner --features live` to enable
# the harness and `cargo test -p toolu-runner --features live -- --ignored`
# to actually execute the live tests.
live = []
live-ghes = ["live"]

[lints]
workspace = true
