[package]
name = "wire"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
shared = { path = "../shared" }
protocol = { path = "../protocol" }

# Async runtime
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net"] }
futures-util = "0.3"

# HTTP transport
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }

# WebSocket for the live-log streamer
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"

# URL parsing (device-flow host validation)
url = ">=2, <2.5.8"

# Observability (no OTel in v1)
tracing = "0.1"

[lints]
workspace = true
